# Onyx

./: .env  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config_parsing/: Cargo.toml
crates/config_parsing/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/database/: Cargo.toml  onyx.db
crates/database/migrations/2026-06-12-000058-0000_create_tables/: down.sql  up.sql
crates/database/src/: lib.rs  models.rs  schema.rs
