[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto = { path = "../crypto" }
config_parsing = { path = "../config_parsing" }
database = { path = "../database" }

clap = { version = "4", features = ["derive"] }
rpassword = "7.5.4"
base64 = "0.22.1"
uuid = { version = "1.23.3", features = ["v4"] }
dialoguer = "0.12"